# Hachathon_AI

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  README.md  docker-compose.yml  gen_keys.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 0d71a450ee23_initial_migration.py  3f9a2e1c7b6d_add_prd_schema.py
src/auth_manager/: bootstrap.py  bot.py  config.py  di.py  main.py  worker.py
src/auth_manager/components/: fast_api_app.py  get_current_user.py  injectable.py
src/auth_manager/components/exceptions/: bad_request_exception.py  forbidden_exception.py  internal_server_exception.py  not_authorized_exception.py  not_found_exception.py
src/auth_manager/components/middlewares/: cors.py  error.py
src/auth_manager/components/storage/: __init__.py  base.py  s3.py
src/auth_manager/domains/: __init__.py  manifest.py
src/auth_manager/domains/bot/: integration.py  router.py  security.py  services.py
src/auth_manager/domains/diff/: router.py  (+1 more)
src/auth_manager/models/: __init__.py  base.py  prd.py  user.py
src/auth_manager/repositories/: auth.py  base.py
src/auth_manager/routers/: auth.py  base.py  ping.py
src/auth_manager/runtime/: __init__.py  api.py  bot.py  worker.py
src/auth_manager/services/: auth.py  base.py
tests/: config.py  conftest.py  fixtures.py
tests/auth/: test_get_public_key.py  test_login.py  test_me.py  test_refresh.py  test_register.py
tests/bot/: test_runtime.py
tests/compliance/: test_pravo_by_source.py
tests/diff/: test_comparison_job_queue.py
tests/storage/: test_s3_object_storage.py
(+22 files in other folders)
